HTML & CSS: central column setting

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- navbar -->
         <nav>
           <ul>
-            <li> <a href="#"><strong>HOME</strong></a> </li>
+            <li><a href="#"><strong>HOME</strong></a></li>
             <li><a href="#"><strong>ABOUT</strong></a></li>
             <li><a href="#"><strong>PAGE TEMPLATES</strong></a></li>
             <li><a href="#"><strong>A PARENT PAGE</strong></a></li>
@@ -39,17 +39,19 @@
         <div class="container">
 
          <!-- left column -->
-          <aside>
+          <aside class="aside-sx">
 
           </aside>
 
           <!-- center column -->
           <main>
+            <h2>THREE COLUMN</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
           </main>
 
           <!-- right column -->
-          <aside>
+          <aside class="aside-dx">
 
             <!-- block 1 right column -->
             <div class="widget">
