HTML & CSS: right column setting

--- a/index.html
+++ b/index.html
@@ -55,12 +55,20 @@
 
             <!-- block 1 right column -->
             <div class="widget">
-
+              <h2>Text widget</h2>
+              <p>This is a example of a text widget. You could write a brief introduction to your site, add links, images, video, HTML and more using a text widget. It's pretty handy!</p>
             </div>
 
             <!-- block 2 right column -->
             <div class="widget">
+              <h2>Text widget</h2>
+              <p>This is a example of a text widget. You could write a brief introduction to your site, add links, images, video, HTML and more using a text widget. It's pretty handy!</p>
+            </div>
 
+            <!-- block 3 right column -->
+            <div class="widget">
+              <h2>Text widget</h2>
+              <p>This is a example of a text widget. You could write a brief introduction to your site, add links, images, video, HTML and more using a text widget. It's pretty handy!</p>
             </div>
 
           </aside>
