--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
 
          <!-- left column -->
           <aside class="aside-sx">
+            <span>
+              <img src="img/wifi.jfif" alt="">
+              <h2>Organic Themes</h2>
+            </span>
+
+            <ul>
+              <li><a href="#">How to Pick A WordPress Theme for 2019</a></li>
+
+              <li><a href="#">The Updated Gutenberg Portfolio Theme</a></li>
+
+              <li><a href="#">Black Friday Through Cyber Monday Deal For WordPress Website Owners</a></li>
+
+              <li><a href="#">The Ultimate Guide To Optimizing Your WordPress Theme For Gutemberg</a></li>
+
+              <li><a href="#">A Better WordPress Page Builder - Organic Builder Widgets Pro</a> </li>
+
+            </ul>
 
           </aside>
 
@@ -55,19 +72,19 @@
 
             <!-- block 1 right column -->
             <div class="widget">
-              <h2>Text widget</h2>
+              <h2>Text Widget</h2>
               <p>This is a example of a text widget. You could write a brief introduction to your site, add links, images, video, HTML and more using a text widget. It's pretty handy!</p>
             </div>
 
             <!-- block 2 right column -->
             <div class="widget">
-              <h2>Text widget</h2>
+              <h2>Text Widget</h2>
               <p>This is a example of a text widget. You could write a brief introduction to your site, add links, images, video, HTML and more using a text widget. It's pretty handy!</p>
             </div>
 
             <!-- block 3 right column -->
             <div class="widget">
-              <h2>Text widget</h2>
+              <h2>Text Widget</h2>
               <p>This is a example of a text widget. You could write a brief introduction to your site, add links, images, video, HTML and more using a text widget. It's pretty handy!</p>
             </div>
 
