HTML & CSS: footer and fonts setting

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Dancing+Script&family=Maven+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <title>Natural Lite</title>
@@ -93,6 +94,21 @@
         </div>
 
       <footer>
+        <div class="footer-nome">
+          <h3>Realized by Michael Cinus</h3>
+        </div>
+        <div class="footer-img">
+          <div class="div-img">
+            <a href="#"><img src="img/facebook.png" alt="not found"></a>
+          </div>
+          <div class="div-img">
+            <a href="#"><img src="img/instagram.png" alt="not found"></a>
+          </div>
+          <div class="div-img">
+            <a href="#"><img src="img/github.png" alt="not found"></a>
+          </div>
+
+        </div>
 
       </footer>
 
