HTML & CSS: final corrections

--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
 
          <!-- left column -->
           <aside class="aside-sx">
-            <span>
-              <img src="img/wifi.jfif" alt="">
-              <h2>Organic Themes</h2>
-            </span>
+            <img src="img/wifi.jfif" alt="">
+
+            <h2>Organic <br>Themes</h2>
 
             <ul>
               <li><a href="#">How to Pick A WordPress Theme for 2019</a></li>
